hack/layersentry/ui-production-v3/deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: layersentry-system
  labels:
    app.kubernetes.io/part-of: layersentry
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
